--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <span>l</span>
         <span>a</span>
         <span>!</span>
+        <span>!</span>
     </div>
     <div class="description">
         <span>Por que hacer cursilerias es lo mio 😊</span>
