--- a/flower.html
+++ b/flower.html
@@ -13,22 +13,24 @@
     <div id="lyrics"></div>
 
     <h1 class="titulo">
-      Estas flores amarillas son un reflejo de la alegría que traes a mi vida. <br />
+      Quiero poder verte llegar a lo que verdaderamante eres, <br />quiero poderte ver llegar a tocar las nubes. <br />
+      Quiero que las nubes no sean el límite de lo que puedes lograr.
       <br />
-      Gracias por iluminar mis días con tu presencia.
+      <br />
+      Gracias por dejarme ser parte tus días como tú de las mias.
     </h1>
     <div class="night"></div>
     <div class="flowers">
       <div class="flower flower--1">
-        <div class="flower__leafs flower__leafs--1" id="video2">
+        <div class="flower__leafs flower__leafs--1">
           <div class="flower__leaf flower__leaf--1" id="video1">
-            <img src="img/disco.png" alt="disco" class="icon-disco" />
+            <img src="img/estadio.png" alt="cine" class="icon-concierto" />
           </div>
           <div class="flower__leaf flower__leaf--2" id="video2">
-            <img src="img/cine.png" alt="cine" class="icon-cine" />
+            <img src="img/disco.png" alt="disco" class="icon-disco" />
           </div>
           <div class="flower__leaf flower__leaf--3" id="video3">
-            <img src="img/concierto.png" alt="cine" class="icon-concierto" />
+            <img src="img/cine.png" alt="cine" class="icon-cine" />
           </div>
           <div class="flower__leaf flower__leaf--4"></div>
           <div class="flower__white-circle"></div>
@@ -53,12 +55,10 @@
       </div>
 
       <div class="flower flower--2">
-        <div class="flower__leafs flower__leafs--2" id="video5">
+        <div class="flower__leafs flower__leafs--2">
           <div class="flower__leaf flower__leaf--1" id="video4"></div>
           <div class="flower__leaf flower__leaf--2" id="video5"></div>
-          <div class="flower__leaf flower__leaf--3" id="video6">
-            <img src="img/estadio.png" alt="cine" class="icon-concierto" />
-          </div>
+          <div class="flower__leaf flower__leaf--3" id="video6"></div>
           <div class="flower__leaf flower__leaf--4"></div>
           <div class="flower__white-circle"></div>
 
@@ -80,7 +80,7 @@
       </div>
 
       <div class="flower flower--3">
-        <div class="flower__leafs flower__leafs--3" id="video8">
+        <div class="flower__leafs flower__leafs--3">
           <div class="flower__leaf flower__leaf--1" id="video7">
             <img src="img/concierto.png" alt="concierto" class="icon-concierto" />
           </div>
@@ -332,6 +332,9 @@
           <source src="" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
+        <div id="modalAnuncio" class="anuncio">
+          <p>Próximamente 😁✨😜✨🎁 </p>
+        </div>
       </div>
     </div>
     <script src="anim.js"></script>
