--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 <body>
     <div class="greetings">
+        <span>S</span>
+        <span>T</span>
+        <span>E</span>
+        <span>P</span>
         <span>H</span>
-        <span>o</span>
-        <span>l</span>
-        <span>a</span>
-        <span>!</span>
-        <span>!</span>
+        <span>,</span>
     </div>
     <div class="description">
         <span>Por que hacer cursilerias es lo mio 😊</span>
@@ -30,7 +30,8 @@
 
     <!-- Créditos -->
     <div class="credits">
-        Por que los mejores momentos vienen sin que tu lo esperaras. SC</p>
+        Por que los mejores momentos vienen sin que tu lo esperes. <span class="keyF">S</span><span class="esc">C</span></p>
+        <div>Dale un <span class="esc">Esc</span> a tus preocupaciones, respira hondo y recuerda que cada nuevo día es una oportunidad y dale un <span class="keyF">F</span> para agrandar tus sueños.</div>
     </div>
 </body>
 
